# autotagger

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  autotag  docker-compose.yml  go.mod  inference_worker.py  main.py  pyproject.toml  requirements.txt
autotagger/: autotagger.py
cmd/server/: main.go  main_test.go
