[project]
name = "autotagger"
version = "1.0.0"
description = "Danbooru autotagger"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "click==8.1.3",
    "fastai",
    "ipython",
    "more-itertools==8.13.0",
    "python-dotenv==0.20.0",
    "scipy>=1.15",
    "timm",
]

[project.optional-dependencies]
notebook = [
    "ipywidgets==7.7.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
